[project]
name = "auto-duet-night-abyss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard==0.13.5",
    "mouseinfo==0.1.3",
    "mss==10.1.0",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pyautogui==0.9.54",
    "pydirectinput==1.0.4",
    "pygetwindow==0.0.9",
    "pymsgbox==2.0.1",
    "pyperclip==1.11.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pytweening==1.2.0",
]
